--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,11 +1,16 @@
 nav {
 
-    @include span-columns(6, 12);
-    @include pre(3);
+    @include box-sizing('border-box');
     @include adjust-font-size-to(26px, 3);
     text-align: center;
     position: absolute;
-    bottom: 2em;
+    right:0em; bottom: 2em; left: 0em;
+    @include container;
+
+    > div {
+        @include span-columns(8,12);
+        @include prefix(2);
+    }
 
     a {
         @include transition-duration(250ms);
